# 12factor_sentimentanalyzer

./: .dockerignore  .env_change  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  README.md.bak  docker-compose.yml  pyproject.toml  redis_check.py  requirements.txt
.github/workflows/: docker-image.yml
app/: main.py  sentiment_analyzer.py
docs/: mkdocs.yml
docs/docs/: about.md  index.md  keycomponents.md  setup.md
tests/: test_main.py
workers/: db_saver_celery_worker.py  tasks.py
