[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "12factor_sentimetanalyzer"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "sandesh" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["12factor_sentimetanalyzer"]
include = ["pyproject.toml", "12factor_sentimetanalyzer/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["12factor_sentimetanalyzer"]
force-sort-within-sections = true

